<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.missgumus.mobile.missgumus5.Menubar">

    <FrameLayout
        android:id="@+id/bar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#A79B8D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <ImageButton
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home"
            android:onClick="MainActivity"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/list"
            android:onClick="List"
            app:srcCompat="@drawable/list" />

        <ImageButton
            android:id="@+id/sepet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/sepet"
            android:onClick="Sepet"
            app:srcCompat="@drawable/sepet" />

        <ImageButton
            android:id="@+id/hesap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/hesap"
            android:onClick="Hesap"
            app:srcCompat="@drawable/hesap" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
